Update HTML files

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="https://csavabel.github.io/hazi-2" target="_blank">Házifeladat 2</a></li>
         <li><a href="https://csavabel.github.io/hazi-3" target="_blank">Házifeladat 3</a></li>
         <li><a href="https://csavabel.github.io/hazi-4-pilis/" target="_blank">Házifeladat 4</a></li>
+        <li><a href="https://csavabel.github.io/hazi-5/" target="_blank">Házifeladat 4</a></li>
     </ul>
 </body>
 </html>
