--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Házi Feladatok</title>
+    <title>Prooktatás házi feladatok</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Házi Feladataim</h1>
-    <ul>
-        <li><a href="https://csavabel.github.io/hazi-1" target="_blank">Házifeladat 1</a></li>
-        <li><a href="https://csavabel.github.io/hazi-2" target="_blank">Házifeladat 2</a></li>
-        <li><a href="https://csavabel.github.io/hazi-3" target="_blank">Házifeladat 3</a></li>
-        <li><a href="https://csavabel.github.io/hazi-4-pilis/" target="_blank">Házifeladat 4</a></li>
-        <li><a href="https://csavabel.github.io/hazi-5/" target="_blank">Házifeladat 5</a></li>
-    </ul>
+    <div class="laptop">
+        <div class="screen">
+            <h1>Házi feladatok</h1>
+            <ul>
+                <li><a href="https://csavabel.github.io/hazi-1" target="_blank">Házifeladat 1</a></li>
+                <li><a href="https://csavabel.github.io/hazi-2" target="_blank">Házifeladat 2</a></li>
+                <li><a href="https://csavabel.github.io/hazi-3" target="_blank">Házifeladat 3</a></li>
+                <li><a href="https://csavabel.github.io/hazi-4-pilis/" target="_blank">Házifeladat 4</a></li>
+                <li><a href="https://csavabel.github.io/hazi-5/" target="_blank">Házifeladat 5</a></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
