--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prooktatás házi feladatok</title>
     <link rel="stylesheet" href="css/style.css">
-</head>
+</head>  
 <body>
     <div class="laptop">
         <div class="screen">
@@ -19,5 +20,12 @@
             </ul>
         </div>
     </div>
+
+    <div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+    </div>
 </body>
 </html>
+
