Frissítés: weboldal tartalma változott

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="https://csavabel.github.io/hazi-3" target="_blank">Házifeladat 3</a></li>
                 <li><a href="https://csavabel.github.io/hazi-4-pilis/" target="_blank">Házifeladat 4</a></li>
                 <li><a href="https://csavabel.github.io/hazi-5/" target="_blank">Házifeladat 5</a></li>
+                <li><a href="https://csavabel.github.io/hazi-6/" target="_blank">Házifeladat 6</a></li>
             </ul>
         </div>
     </div>
