--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="https://csavabel.github.io/hazi-4-pilis/" target="_blank">Házifeladat 4</a></li>
                 <li><a href="https://csavabel.github.io/hazi-5/" target="_blank">Házifeladat 5</a></li>
                 <li><a href="https://csavabel.github.io/hazi-6/" target="_blank">Házifeladat 6</a></li>
+                <li><a href="https://csavabel.github.io/prooktatas_projekt/" target="_blank">Projektmunka</a></li>
             </ul>
         </div>
     </div>
